# envpool-assets

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-wheel.yml
scripts/: build_wheel.py  collect_envpool_assets.py  optimize_wheel.py
src/envpool_assets/: __init__.py
